@@ -31,7 +31,7 @@
 
 	<!-- set global properties for this build -->
 	<property name="DEST" value="${BUILD_ROOT}/functional/Java11andUp" />
-		
+
 	<!--Properties for this particular build-->
 	<property name="src" location="./src"/>
 	<property name="build" location="./bin"/>
@@ -63,11 +63,10 @@
 		</javac>
 	</target>
 
-	<target name="generate_condy" depends="compile_generator" description="Run Condugenerator to generate bytecode" >
+	<target name="generate_condy" depends="compile_generator" description="Run Condygenerator to generate bytecode" >
 		<property name="javaexecutable.java" value="${TEST_JDK_HOME}/bin/java" />
 		<echo>Running CondyGenerator</echo>
 		<java classname="org.openj9.test.condy.CondyGenerator" fork="true" failonerror="true" logError="true" jvm="${javaexecutable.java}">
-			<jvmarg value="-Xverify:none" />
 			<classpath>
 				<pathelement location="${LIB_DIR}/asm.jar" />
 				<pathelement location="${build}" />
@@ -80,7 +79,7 @@
 			</fileset>
 		</delete>
 	</target>
-	
+
 	<target name="compile" depends="generate_condy" description="Using java ${JDK_VERSION} to compile the source" >
 		<echo>Ant version is ${ant.version}</echo>
 		<echo>============COMPILER SETTINGS============</echo>
@@ -113,7 +112,7 @@
 			<fileset dir="${src}/../" includes="*.mk" />
 		</copy>
 	</target>
-	
+
 	<target name="build" >
 		<condition property="is_JDK_IMPL_ibm">
 			<or>
